testsuite/tests/properties/invalid_lambda_arg_type/filtermap_index_2.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.ifiltermap(
            (e: Example, i: Int) => if i == 0 then node.items.at(1) else e,
            (e: Example, i: Bool) => not e.is_null or i
        )
}
